DynamicItems - Fixed problems with sub-entities-grid, they were always either too big or too small. Fixed it by removing some weird and unneeded CSS that caused these problems.

--- a/FrontEnd/Modules/Base/Css/masterpage.css
+++ b/FrontEnd/Modules/Base/Css/masterpage.css
@@ -210,27 +210,6 @@ ins {
 .k-window-content > .pane-content .k-tabstrip .dynamicTabContent {
     align-content: flex-start;
 }
-.k-window-content > .pane-content .k-tabstrip .dynamicTabContent .gridview {
-    max-height: calc(100% - 132px);
-    height: 100%;
-}
-.k-window-content > .pane-content .k-tabstrip .dynamicTabContent .gridview:nth-of-type(1) {
-    min-height: calc(100vh - 222px);
-    display: flex;
-    flex-direction: column;
-}
-.k-window-content > .pane-content .k-tabstrip .dynamicTabContent .k-grid {
-    margin: 0;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    height: 100% !important;
-    min-height: 250px;
-}
-.k-window-content > .pane-content .k-tabstrip .dynamicTabContent .k-grid .k-grid-content {
-    flex-grow: 1;
-}
 #alert {
     display: none;
 }
